# coffe-tech-demo

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
services/inventory-service/: Cargo.toml  README.md
services/inventory-service/src/: main.rs
services/machine-service/: Cargo.toml  README.md
services/machine-service/src/: inventory.rs  main.rs  rabbitmq.rs  status.rs
services/order-service/: Cargo.toml  Dockerfile  README.md
services/order-service/src/: main.rs  rabbitmq.rs
test/: docker-compose.yml
test/services/inventory-service/: http-client.env.json  test.http
test/services/machine-service/: http-client.env.json  test.http
test/services/order-service/: test.http
