[package]
name = "inventory-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"